[ADD] add main codes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-/0.paper
-/1.data
-/2.tools
-/3.rhino
-/venv/Lib
-/venv/__pycache__
-/venv/.idea
+/0.paper/
+/1.data/
+/2.tools/
+/3.rhino/
+/venv/Lib/
+/venv/__pycache__/
+/venv/.idea/
+!venv/
+!venv/*/
+!venv/*/*
 *.zip
-/.idea
-/.ipynb_checkouts
+/.idea/
+/.ipynb_checkouts/
